--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" id="text" readonly>
     <button id="clean">clean</button>
     <script>
-        let container = document.getElementById('container');
+        let box = document.getElementById('box');
         let clean = document.getElementById('clean');
 
 	let table = container.appendChild(document.createElement('table'));
@@ -46,7 +46,7 @@
 // clean all the red squares
         function restart(){
             column.style.backgroundColor=('green');
-            text.value=0;
+            text.value=" ";
         }
         }
 }
