--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h1>MOVIE RESERVATIONS CARLOS III</h1>
-    <div id="contenedor">
+    <div id="container">
     </div><br>
     <label>Total reservations</label>
     <input type="text" id="text" readonly>
     <button id="clean">clean</button>
     <script>
-        let box = document.getElementById('box');
+        let container = document.getElementById('container');
         let clean = document.getElementById('clean');
 
 	let table = container.appendChild(document.createElement('table'));
